--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ matplotlib==3.2.1
 numpy==1.18.4
 oauthlib==3.1.0
 opt-einsum==3.2.1
+Pillow==7.1.2
 protobuf==3.11.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
