--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ jupyter==1.0.0
 jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+jupyter-tabnine==1.1.0
 Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
@@ -46,15 +47,18 @@ matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.6
+neural-structured-learning==1.1.0
 notebook==6.0.3
 numpy==1.18.4
 oauthlib==3.1.0
 opt-einsum==3.2.1
 packaging==20.3
+pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.7.0
 pickleshare==0.7.5
 Pillow==7.1.2
+pluggy==0.13.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
 protobuf==3.11.3
@@ -66,6 +70,9 @@ Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
+python-jsonrpc-server==0.3.4
+python-language-server==0.32.0
+pytz==2020.1
 pywin32==227
 pywinpty==0.5.7
 PyYAML==5.3.1
