--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ pandocfilters==1.4.2
 parso==0.7.0
 pickleshare==0.7.5
 Pillow==7.1.2
+plotly==4.7.1
 pluggy==0.13.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
@@ -81,6 +82,7 @@ qtconsole==4.7.4
 QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
+retrying==1.3.3
 rsa==4.0
 scikit-learn==0.23.0
 scipy==1.4.1
