--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,142 @@
-absl-py==0.9.0
-appdirs==1.4.4
+-ensorflow-gpu==2.4.0
+absl-py==0.11.0
+argon2-cffi==20.1.0
 astunparse==1.6.3
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.5
-cachetools==4.1.0
-certifi==2020.4.5.1
-chardet==3.0.4
-colorama==0.4.3
-configparser==5.0.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
+brotlipy==0.7.0
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+cftime==1.4.1
+chardet==4.0.0
+colorama==0.4.4
+conda==4.9.2
+conda-package-handling==1.7.2
+cryptography==3.3.1
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
-distlib==0.3.0
+dill==0.3.3
+emcee==2.2.1
 entrypoints==0.3
-filelock==3.0.12
+flatbuffers==1.12
 gast==0.3.3
-google-auth==1.14.3
-google-auth-oauthlib==0.4.1
+gitdb==4.0.5
+GitPython==3.1.13
+google-auth==1.26.1
+google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-graphviz==0.14
-grpcio==1.28.1
+GPy==1.9.9
+grpcio==1.32.0
 h5py==2.10.0
-idna==2.9
-importlib-metadata==1.6.0
-ipykernel==5.2.1
-ipython==7.14.0
+idna==2.10
+importlib-metadata==2.0.0
+ipykernel==5.3.4
+ipython==7.20.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.0
-Jinja2==2.11.2
-joblib==0.14.1
+ipywidgets==7.6.3
+jedi==0.17.2
+Jinja2==2.11.3
+joblib==1.0.0
+json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-jupyter-tabnine==1.1.0
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-Markdown==3.2.2
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.7.1
+jupyterlab==2.2.6
+jupyterlab-pygments==0.1.2
+jupyterlab-server==1.2.0
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+Markdown==3.3.3
 MarkupSafe==1.1.1
-matplotlib==3.2.1
+matplotlib==3.3.3
+menuinst==1.4.16
 mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.6
-neural-structured-learning==1.1.0
-notebook==6.0.3
-numpy==1.18.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+nbclient==0.5.1
+nbconvert==6.0.7
+nbdime==2.1.0
+nbformat==5.1.2
+nc-time-axis==1.2.0
+nest-asyncio==1.4.3
+netCDF4==1.5.3
+neural-structured-learning==1.3.1
+notebook==6.2.0
+numpy==1.18.5
 oauthlib==3.1.0
-opt-einsum==3.2.1
-packaging==20.3
-pandas==1.0.3
-pandocfilters==1.4.2
+olefile==0.46
+opt-einsum==3.3.0
+packaging==20.9
+pandas==1.2.1
+pandocfilters==1.4.3
+paramz==0.9.5
 parso==0.7.0
 pickleshare==0.7.5
-Pillow==7.1.2
-plotly==4.7.1
-pluggy==0.13.1
-prometheus-client==0.7.1
-prompt-toolkit==3.0.5
-protobuf==3.11.3
-pyAgrum==0.17.3
+Pillow==8.1.0
+pip==20.3.3
+plotly==4.14.3
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycosat==0.6.3
+pycparser==2.20
 pydotplus==2.0.2
-Pygments==2.6.1
+Pygments==2.7.4
+pyOpenSSL==20.0.1
 pyparsing==2.4.7
-pyrsistent==0.16.0
+pyrsistent==0.17.3
+PySocks==1.7.1
 python-dateutil==2.8.1
-python-jsonrpc-server==0.3.4
-python-language-server==0.32.0
-pytz==2020.1
+pytz==2021.1
 pywin32==227
 pywinpty==0.5.7
-PyYAML==5.3.1
-pyzmq==19.0.1
-qtconsole==4.7.4
+PyYAML==5.4.1
+pyzmq==20.0.0
+qtconsole==5.0.2
 QtPy==1.9.0
-requests==2.23.0
+requests==2.25.1
 requests-oauthlib==1.3.0
 retrying==1.3.3
-rsa==4.0
-scikit-learn==0.23.0
+rsa==4.7
+ruamel-yaml==0.15.87
+scikit-learn==0.24.0
 scipy==1.4.1
 Send2Trash==1.5.0
-six==1.14.0
-tensorboard==2.2.1
-tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
+setuptools==52.0.0.post20210125
+sip==4.19.13
+six==1.15.0
+smmap==3.0.5
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.3.0
+tensorflow-addons==0.12.1
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
-terminado==0.8.3
+terminado==0.9.2
 testpath==0.4.4
-threadpoolctl==2.0.0
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.25.9
-virtualenv==20.0.20
-wcwidth==0.1.9
+threadpoolctl==2.1.0
+torchlayers==0.1.1
+tornado==6.1
+tqdm==4.56.0
+traitlets==5.0.5
+typeguard==2.10.0
+urllib3==1.26.3
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
+wheel==0.36.2
 widgetsnbextension==3.5.1
+win-inet-pton==1.1.0
+wincertstore==0.2
 wrapt==1.12.1
-zipp==3.1.0
+xarray==0.16.2
+zipp==3.4.0
