--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,46 @@
--ensorflow-gpu==2.4.0
 absl-py==0.11.0
+aiohttp==3.7.4
 argon2-cffi==20.1.0
 astunparse==1.6.3
 async-generator==1.10
+async-timeout==3.0.1
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.3.0
+blinker==1.4
 brotlipy==0.7.0
 cachetools==4.2.1
 certifi==2020.12.5
-cffi==1.14.5
-cftime==1.4.1
-chardet==4.0.0
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
 colorama==0.4.4
 conda==4.9.2
 conda-package-handling==1.7.2
-cryptography==3.3.1
+configparser==5.0.2
+coverage==5.5
+cryptography==3.2.1
 cycler==0.10.0
+Cython==0.29.22
 decorator==4.4.2
-defusedxml==0.6.0
+defusedxml==0.7.1
 dill==0.3.3
-emcee==2.2.1
 entrypoints==0.3
-flatbuffers==1.12
 gast==0.3.3
-gitdb==4.0.5
-GitPython==3.1.13
-google-auth==1.26.1
-google-auth-oauthlib==0.4.2
+google-auth==1.27.1
+google-auth-oauthlib==0.4.3
 google-pasta==0.2.0
-GPy==1.9.9
-grpcio==1.32.0
+grpcio==1.36.1
 h5py==2.10.0
 idna==2.10
 importlib-metadata==2.0.0
 ipykernel==5.3.4
-ipython==7.20.0
+ipython==7.21.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
-jedi==0.17.2
+jedi==0.17.0
 Jinja2==2.11.3
-joblib==1.0.0
+joblib==1.0.1
 json5==0.9.5
 jsonschema==3.2.0
 jupyter==1.0.0
@@ -51,72 +51,73 @@ jupyterlab==2.2.6
 jupyterlab-pygments==0.1.2
 jupyterlab-server==1.2.0
 jupyterlab-widgets==1.0.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
-Markdown==3.3.3
+Markdown==3.3.4
 MarkupSafe==1.1.1
-matplotlib==3.3.3
+matplotlib==3.3.4
 menuinst==1.4.16
 mistune==0.8.4
-mkl-fft==1.2.0
+mkl-fft==1.3.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-nbclient==0.5.1
+multidict==5.1.0
+nbclient==0.5.3
 nbconvert==6.0.7
-nbdime==2.1.0
 nbformat==5.1.2
-nc-time-axis==1.2.0
-nest-asyncio==1.4.3
-netCDF4==1.5.3
+nest-asyncio==1.5.1
 neural-structured-learning==1.3.1
 notebook==6.2.0
 numpy==1.18.5
 oauthlib==3.1.0
 olefile==0.46
-opt-einsum==3.3.0
+opt-einsum==3.1.0
 packaging==20.9
-pandas==1.2.1
+pandas==1.2.3
 pandocfilters==1.4.3
-paramz==0.9.5
-parso==0.7.0
+parso==0.8.1
 pickleshare==0.7.5
-Pillow==8.1.0
-pip==20.3.3
+Pillow==8.1.2
+pip==20.2.4
 plotly==4.14.3
 prometheus-client==0.9.0
 prompt-toolkit==3.0.8
 protobuf==3.14.0
+pyAgrum==0.19.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycosat==0.6.3
 pycparser==2.20
 pydotplus==2.0.2
-Pygments==2.7.4
-pyOpenSSL==20.0.1
+Pygments==2.8.0
+PyJWT==1.7.1
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
+pyreadline==2.1
 pyrsistent==0.17.3
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2021.1
 pywin32==227
 pywinpty==0.5.7
-PyYAML==5.4.1
 pyzmq==20.0.0
 qtconsole==5.0.2
 QtPy==1.9.0
-requests==2.25.1
+requests==2.24.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
-rsa==4.7
+rsa==4.7.2
 ruamel-yaml==0.15.87
-scikit-learn==0.24.0
+scikit-learn==0.24.1
 scipy==1.4.1
 Send2Trash==1.5.0
-setuptools==52.0.0.post20210125
+setuptools==50.3.1.post20201107
 sip==4.19.13
 six==1.15.0
-smmap==3.0.5
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.8.0
+sklearn==0.0
+tensorboard==2.4.0
+tensorboard-plugin-wit==1.6.0
 tensorflow==2.3.0
 tensorflow-addons==0.12.1
 tensorflow-estimator==2.3.0
@@ -124,19 +125,19 @@ termcolor==1.1.0
 terminado==0.9.2
 testpath==0.4.4
 threadpoolctl==2.1.0
-torchlayers==0.1.1
 tornado==6.1
-tqdm==4.56.0
+tqdm==4.51.0
 traitlets==5.0.5
-typeguard==2.10.0
-urllib3==1.26.3
+typeguard==2.11.1
+typing-extensions==3.7.4.3
+urllib3==1.25.11
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==1.0.1
-wheel==0.36.2
+wheel==0.35.1
 widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.12.1
-xarray==0.16.2
+yarl==1.6.3
 zipp==3.4.0
