--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,pycharm+all,python,jupyternotebooks,windows
+.vscode/**/*
+.vscode*
+.vscode/*
+.vscode
